package ThirdRun;

public class RacingGame {

  public static void main(String[] args) {
    // GENERATE AND PRINT OUT 2 DRIVERS
    Driver firstDriver = new Driver("Steve", "McQueen", 4); // At first we generate an Driver object and assign it to the VAR firstDriver.
    System.out.println("Driver: " + firstDriver); // The print out of the object variable firstDriver delivers a text, which is generated by the toString() method.
    System.out.println("Drivers lastname: " + firstDriver.getLastName()); // We access the firstDriver object and execute its method getLastName delivers the required value.

    Driver secondDriver = new Driver("Michael", "Schumacher", 1);
    System.out.println("Driver: " + secondDriver);
    System.out.println("Drivers first- and lastname: " + secondDriver.getName());


    // GENERATE AND PRINT OUT 2 VEHICLES
    Vehicle firstVehicle = new Vehicle("Porsche", "Carrera GT4", 451, Vehicle.EngineType.gasoline);
    System.out.println("Vehicle: " + firstVehicle);

    Vehicle secondVehicle = new Vehicle("Dodge", "Challenger", 420, Vehicle.EngineType.diesel);
    System.out.println("Vehicle: " + secondVehicle);


    // GENERATE AND PRINT OUT 2 MOTORCYCLES
    Motorcycle coolMotorcycle = new Motorcycle("Triumph", "Adler", 79, Vehicle.EngineType.gasoline, Motorcycle.MotorcycleType.Chopper, Motorcycle.MotorcycleColor.black, "Seat-Heater" );
    System.out.println("Motorcycle: " + coolMotorcycle);
    System.out.println("Motorcycles color: " + coolMotorcycle.getMotorcycleColor());

    Motorcycle solidMotorcycle = new Motorcycle("BMW", "Gaudi", 57, Vehicle.EngineType.diesel, Motorcycle.MotorcycleType.Allrounder, Motorcycle.MotorcycleColor.metallic, "Roof");
    System.out.println("Motorcycle: " + solidMotorcycle);
    System.out.println("Motorcycles extra equipement: " + solidMotorcycle.getExtraEquipement());


    // GENERATE AND PRINT OUT 2 TRUCKS
    Truck giantTruck = new Truck("Mack", "Logistiker", 500, Vehicle.EngineType.diesel, Truck.TruckType.Box_Truck, Truck.TruckSize.xxlarge, "Bed & Toilet");
    System.out.println("Truck: " + giantTruck);
    System.out.println("Trucks size: " + giantTruck.getTruckSize());

    Truck powerTruck = new Truck("Volvo", "Scandinavic", 840, Vehicle.EngineType.diesel, Truck.TruckType.Tow_Truck, Truck.TruckSize.xlarge, "Power Booster");
    System.out.println("Truck: " + powerTruck);
    System.out.println("Trucks extra equipement: " + powerTruck.getExtraEquipement());

    // GENERATE A COMPETITOR
    Competitor competitor = new Competitor(firstDriver, coolMotorcycle, 0);
    System.out.println(competitor);


    CompetitorsGenerator cg = new CompetitorsGenerator();


    // GENERATE A COMPETITOR LIST
    CompetitorList erstesRennen = new CompetitorList();
    for (int i = 0; i < 8; i++) {
      Competitor c = cg.getRandomCompetitor();
      erstesRennen.addCompetitor(c);
    }
    erstesRennen.addCompetitor(competitor);
    System.out.println(erstesRennen);
  }

}
