@startuml

title __THIRDRUN's Class Diagram__\n

  package ThirdRun {
    class Competitor {
        - points : int
        + Competitor()
        + getDriver()
        + getVehicle()
        + getPoints()
        + setPoints()
        + toString()
    }
  }
  

  package ThirdRun {
    class CompetitorList {
        - competitors : List<Competitor>
        + addCompetitor()
        + getCompetitors()
        + toString()
    }
  }
  

  package ThirdRun {
    class CompetitorsGenerator {
        {static} - startingNumber : int
        - getRandomDriver()
        - getRandomVehicle()
        + getRandomCompetitor()
    }
  }
  

  package ThirdRun {
    class Driver {
        - firstName : String
        - lastName : String
        - startingNumber : int
        - driverText : String
        + getFirstName()
        + getLastName()
        + getName()
        + getStartingNumber()
        + Driver()
        + toString()
    }
  }
  

  package ThirdRun {
    class Motorcycle {
        - extraEquipement : String
        + Motorcycle()
        + getMotorcycleType()
        + getMotorcycleColor()
        + getExtraEquipement()
        + toString()
    }
  }
  

  package ThirdRun {
    enum MotorcycleType {
      Allrounder
      Chopper
      Enduro
      Dirtbike
      Caferacer
      Racer
    }
  }
  

  package ThirdRun {
    enum MotorcycleColor {
      black
      white
      red
      green
      blue
      yellow
      orange
      grey
      pink
      metallic
      bubblegum
      dirty
    }
  }
  

  package ThirdRun {
    class Race {
        - startingLineUP : List<Competitor>
        - raceResult : List<Competitor>
        + Race()
        + generateStartingLineup()
        + race()
        + getStartingLineUP()
        + getCompetitors()
        + getRaceResult()
        + toString()
    }
  }
  

  package ThirdRun {
    class RacingGame {
        {static} + main()
    }
  }
  

  package ThirdRun {
    class Truck {
        - extraEquipement : String
        + Truck()
        + getTruckType()
        + getTruckSize()
        + getExtraEquipement()
        + toString()
    }
  }
  

  package ThirdRun {
    enum TruckType {
      Tow_Truck
      Box_Truck
      Faltbed_Truck
    }
  }
  

  package ThirdRun {
    enum TruckSize {
      small
      medium
      large
      xlarge
      xxlarge
    }
  }
  

  package ThirdRun {
    class Vehicle {
        - manufacturer : String
        - model : String
        - horsepower : int
        - vehicleText : String
        + getManufacturer()
        + getModel()
        + getHorsepower()
        + getEngineType()
        + getVehicleText()
        + Vehicle()
        + toString()
    }
  }
  

  package ThirdRun {
    enum EngineType {
      electric
      diesel
      gasoline
    }
  }
  

  Competitor o-- Driver : driver
  Competitor o-- Vehicle : vehicle
  Motorcycle -up-|> Vehicle
  Motorcycle o-- MotorcycleType : motorcycleType
  Motorcycle o-- MotorcycleColor : motorcycleColor
  Motorcycle +-down- MotorcycleType
  Motorcycle +-down- MotorcycleColor
  Race o-- CompetitorList : competitors
  Truck -up-|> Vehicle
  Truck o-- TruckType : truckType
  Truck o-- TruckSize : truckSize
  Truck +-down- TruckType
  Truck +-down- TruckSize
  Vehicle o-- EngineType : engineType
  Vehicle +-down- EngineType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
